@@ -10,8 +10,8 @@
  parentproxyport="3128"
  debuglevel="3"
  showerrors="1"
- noproxyfor="localhost,127.0.0.1"
- allowedhosts="localhost,127.0.0.1"
+ noproxyfor="127.0.0.1,localhost"
+ allowedhosts="127.0.0.1,localhost"
 >
 <filter name="Header"/>
 <filter name="Replacer"/>
