@@ -1,3 +1,5 @@
+import sys
+
 # debug level constants (Quake-style)
 ALWAYS = 0
 BRING_IT_ON = 1
@@ -5,29 +7,48 @@ HURT_ME_PLENTY = 2
 NIGHTMARE = 3
 
 # the global debug level
-DebugLevel = 0
+_debuglevel = 0
+
+def get_debuglevel ():
+    return _debuglevel
+
+def set_debuglevel (i):
+    global _debuglevel
+    _debuglevel = i
 
 from AnsiColor import colorize
 
-def _text (color=None, *args):
-    print >>sys.stderr, colorize(" ".join(map(str, args)), color=color)
+def _text (*args, **kwargs):
+    text = " ".join(map(str, args))
+    print >>sys.stderr, colorize(text, color=kwargs.get('color'))
 
 # debug function, using the debug level
 def debug (level, *args):
-    if level <= DebugLevel:
+    if level <= _debuglevel:
         _text(*args)
 
 def info (*args):
     args = list(args)
     args.insert(0, "info:")
-    _text(color="default", *args)
+    _text(*args, **{'color':'default'})
 
 def warn (*args):
     args = list(args)
     args.insert(0, "warning:")
-    _text(color="bold;yellow", *args)
+    _text(*args, **{'color':'bold;yellow'})
 
 def error (*args):
     args = list(args)
     args.insert(0, "error:")
-    _text(color="bold;red", *args)
+    _text(*args, **{'color':'bold;red'})
+
+
+def test ():
+    #debug("a")
+    warn("a", "b")
+    info(None)
+    error()
+
+if __name__=='__main__':
+    test()
+
